[project]
name = "khapitools"
version = "0.1.0"
authors = [{ name="khfix", email="hamza.alkhatib.se@gmail.com" }]
description = "Image Search API for Khapi package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khfix/khapitools"
Issues = "https://github.com/khfix/khapitools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"




